# range

./: .drone.star  .travis.yml  CMakeLists.txt  README.md  build.jam  index.html
.drone/: drone.sh
.github/workflows/: ci.yml
doc/: boost_range.html  boost_range.qbk  example.cpp  intro.html  range.html  upgrade.qbk
doc/reference/: adaptors.qbk  synopsis.qbk  utilities.qbk
doc/reference/adaptors/: addressed.qbk  filtered.qbk  indexed.qbk
include/boost/range/: adaptors.hpp  any_range.hpp  as_literal.hpp  begin.hpp  concepts.hpp  const_iterator.hpp  const_reverse_iterator.hpp  difference_type.hpp  end.hpp  has_range_iterator.hpp  irange.hpp  iterator.hpp  iterator_range.hpp  iterator_range_core.hpp  (+11 more)
test/: CMakeLists.txt  Jamfile.v2  algorithm.cpp  copymovable.hpp  extension_mechanism.cpp  iterator_range.cpp  iterator_range_drop.cpp  separated.cpp  std_span.cpp  string.cpp  sub_range.cpp  ticket_5811_indirected_optional.cpp  ticket_6715_iterator_range_equality.cpp
test/adaptor_test/: addressed.cpp  addressed_example.cpp  moved.cpp  replaced_if.cpp  strided.cpp  transformed.cpp  type_erased.cpp  type_erased_abstract.cpp  type_erased_bidirectional.cpp  type_erased_brackets.cpp  type_erased_forward.cpp  type_erased_mix_values.cpp  type_erased_random_access.cpp  type_erased_single_pass.cpp  type_erased_tparam_conv.cpp  type_erased_transformed.cpp
test/algorithm_ext_test/: noncopyable_int.h  push_back.cpp  push_front.cpp
test/algorithm_test/: copy_backward.cpp  find_return_root.cpp  move.cpp  move_backward.cpp
test/test_driver/: range_return_root_test_driver.hpp
(+29 files in other folders)
